# ch573-workspace

./: .bazelrc  .gitignore  BUILD  README.md  WORKSPACE
embedded/: BUILD.bazel  ch573.ld
embedded/sdk/: CH573SFR.h  CH57x_adc.c  CH57x_clk.c  CH57x_clk.h  CH57x_common.h  CH57x_gpio.c  CH57x_gpio.h  CH57x_pwm.h  CH57x_pwr.c  CH57x_sys.c  CH57x_sys.h  CH57x_timer.h  CH57x_timer0.c  CH57x_timer1.c  CH57x_timer2.c  CH57x_timer3.c  CH57x_uart0.c  CH57x_usbdev.h  ISP573.h  core_riscv.h
embedded/src/: main.cc
